[package]
name = "nazrin"
version = "0.1.0"
authors = ["Jade <jade@bytes.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
ddc-hi = "0.3"
futures = "0.3"
futures-util = "0.3"
tokio-udev = {git = "https://github.com/witchof0x20/tokio-udev"} 
tokio = { version = "0.3", features = ["full"] }
