[package]
name = "nazrin"
version = "0.1.0"
authors = ["Jade <jade@bytes.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
ddc-hi = "0.3"
futures-util = "0.3"
tokio = {version="1.19", features=["macros", "rt-multi-thread"]}
tokio-udev = "0.8"
